--- a/index_Guia.html
+++ b/index_Guia.html
@@ -12,9 +12,10 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">logo</a>
+            <a class="navbar-brand" href="#"></a>
+                <img src="img/paramount.logo.svg" height="28px" alt="">
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
+                <ul class="navbar-nav"> 
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Halo Ver AHORA</a>
                     </li>
