--- a/index_Guia.html
+++ b/index_Guia.html
@@ -11,11 +11,11 @@
 
 <body>
     <nav class="navbar navbar-expand-lg bg-light">
-        <div class="container-fluid">
+        <div class="container">
             <a class="navbar-brand" href="#"></a>
-                <img src="img/paramount.logo.svg" height="28px" alt="">
+            <img src="img/paramount.logo.svg" height="28px">
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav"> 
+                <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Halo Ver AHORA</a>
                     </li>
@@ -26,6 +26,99 @@
             </div>
         </div>
     </nav>
+    <div>
+
+    </div>
+    <section class="padded-container">
+        <div class="grid">
+            <div class="grid-item">
+                <h1 data-row-position="0" class="includeInScrollTracking">
+                    HISTORIAS ÚNICAS. ESTRELLAS ICÓNICAS. UNA MONTAÑA DE ENTRETENIMIENTO.</h1>
+                <div class="upsell-text">
+                    <strong>
+                        Suscríbete por $13,900.00&nbsp;COP al Mes. <br>Cancela en cualquier momento. </strong>
+                    <strong>
+                        Únete ahora y obtén 7 días gratis. </strong>
+                </div>
+                <div class="hero__cta">
+                    <a href="/co/signup/" class="button focusable button__extra-large js-cta-tracking "
+                        aa-link="upsell|top|suscrÍbete a paramount+||||||||||||" role="link" tabindex="0">
+                        <div class="button__text">
+                            SUSCRÍBETE A PARAMOUNT+ </div>
+                    </a>
+                    <span class="hero__alt">
+                         </span>
+                    <a href="/co/signin/" class="button focusable button__extra-large terciary" role="link"
+                        tabindex="0">
+                        <div class="button__text">
+                            YA TENGO PARAMOUNT+ </div>
+                    </a>
+                    <a href="/co/partner/" class="button focusable button__extra-large terciary" role="link"
+                        tabindex="0">
+                        <div class="button__text">
+                            INICIA SESIÓN CON TU PROVEEDOR </div>
+                    </a>
+
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+
+
+
+
+
+    <div class="container">
+        <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 my-5 border-top">
+            <div class="col mb-3">
+                <a href="/" class="d-flex align-items-center mb-3 link-dark text-decoration-none">
+                    <svg class="bi me-2" width="40" height="32">
+                        <use xlink:href="#bootstrap"></use>
+                    </svg>
+                </a>
+                <p class="text-muted">© 2022</p>
+            </div>
+            <div class="col mb-3">
+            </div>
+            <div class="col mb-3">
+                <h5>Sección</h5>
+                <ul class="nav flex-column">
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Inicio</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Características</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Precios</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Acerca</a></li>
+                </ul>
+            </div>
+            <div class="col mb-3">
+                <h5>Sección</h5>
+                <ul class="nav flex-column">
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Inicio</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Características</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Precios</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Acerca</a></li>
+                </ul>
+            </div>
+            <div class="col mb-3">
+                <h5>Sección</h5>
+                <ul class="nav flex-column">
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Inicio</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Características</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Precios</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">FAQs</a></li>
+                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Acerca</a></li>
+                </ul>
+            </div>
+        </footer>
+    </div>
+
+
+
+
 
 
 
