Paramont 10:53pm domingo

--- a/index_guia1.html
+++ b/index_guia1.html
@@ -41,11 +41,10 @@
     </section>
 
     <section class="fondoHome2">
-        <div class=" d-flex flex-column col-5">
+        <div class="d-flex flex-column col-5">
             <h1 class="ms-5" style=" margin-top: 80px;">SOMOS ORIGINALES Y EXCLUSIVOS</h1>
             <h4 class="ms-5 mt-4">Disfruta de historias únicas, estrellas icónicas y programas <br> exclusivos que no
-                encontrarás en ningún
-                otro lugar.</h4>
+                encontrarás en ningún otro lugar.</h4>
         </div>
     </section>
 
@@ -53,8 +52,7 @@
         <div class="d-flex flex-column col-3">
             <h1 class="ms-5" style=" margin-top: 80px;">TENEMOS TU CONTENIDO FAVORITO</h1>
             <h4 class="ms-5 mt-4">Desde películas taquilleras y series reconocidas a tus programas favoritos, en
-                Paramount+ podrás
-                disfrutarlo todo una y otra vez.</h4>
+                Paramount+ podrás disfrutarlo todo una y otra vez.</h4>
         </div>
     </section>
 
@@ -71,13 +69,13 @@
     </section>
 
     <footer>
-        <section style="background-color:rgb(0, 0, 0);">
+        <section style="background-color:rgb(0, 0, 0)">
             <div class="container textoFooter">
                 <div class="row">
                     <div class="col-3 mt-5">
                         <h6 class="mb-4">Navegación del sitio</h6>
                         <li style="list-style: none;">Paramount+ Colombia</li>
-                        <li style="list-style: none;">Paramount+ Colombia</li>
+                        <li style="list-style: none;">Paramount+ Global</li>
                     </div>
                     <div class="col-3 mt-5">
                         <h6 class="mb-4">Privacidad y términos</h6>
